--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
     --font-bold: 900;
 }
 
-/* 🎨 MIS CSS*/
+/* MIS CSS*/
 
 body {
     background-color: var(--background);
@@ -39,6 +39,7 @@ nav a {
     color: var(--primary);
     text-decoration: none;
     font-weight: var(--font-bold);
+    font-size: 13px;
 }
 
 nav a.activo {
@@ -71,36 +72,44 @@ justify-content: space-between;
 h1 {
     padding: 15px;
     color: #020381;
+    position: relative;
+    text-align: center;
 }
 
 h1:after {
     content: "";
     position: absolute;
+    left: 50%;               /* empieza en el centro */
+    bottom: -5px;            /* separa la línea del texto */
+    transform: translateX(-50%); /* centra realmente */
+    width: 50px;             /* ancho de la línea */
     height: 4px;
     background-color: #fcc139;
-    left: 12px;
-    bottom: 550px;
-    width: 5%
+    
+}
+
+#search {
+  margin: 0 auto;     /* centra horizontalmente */
+  width: 70%;
 }
 
 #film-form {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 15px;
-}
-
-td img {
-    display: flex;
-    width: 25%;
-    
+   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 15px;
+  max-width: 800px;   
+  margin: 0 auto;     /* centra horizontalmente */
+  background-color: #f9f9f9; 
+  border-radius: 10px;       
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1); /* sombra suave */
 }
 
 #films {
     padding: 15px;
 }
+
 
 thead {
     background-color: #020381;
@@ -108,6 +117,37 @@ thead {
 }
 
 table {
-    border-right: none; /* Eliminamos las líneas verticales */
+    border: none; /* Eliminamos las líneas verticales */
     border-collapse: collapse; /* Necesario para que los bordes se gestionen bien */
+    max-width: 1200px;   
+    margin: 0 auto;     /* centra horizontalmente */
+    background-color: #f9f9f9; 
+    border-radius: 10px;       
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1); /* sombra suave */
+}
+
+th, td {
+  border: none;
+  padding: 5px;
+}
+
+td img {
+  width: 100%;
+  height: auto;
+  max-width: 200px; 
+  display: block;
+  object-fit: contain;
+}
+
+footer {
+    text-align: center;
+    position: sticky;
+    width: 100%;
+    height: 100%;
+    background-color: #020381;
+    color: #ffffff;
+}
+
+footer p {
+    padding: 15px;
 }
